--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,17 @@ h2 {
 
 .intro{
     display: flex;
-    width: 700px;
+    max-width: 600px;
     margin: auto;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
 }
 .introLeft{
+    display: inline-block;
     width: 40%;
 }
 .introRight{
+    display: inline-block;
     width: 60%;
 }
 
@@ -99,17 +103,25 @@ h2 {
 
 
 .gallery{
+    max-width: 1000px;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     align-items:flex-start;
-    margin: 20px;
 }
 
 .gallery img{
     width: 25%;
     height: auto;
     padding: 2px;
-    vertical-align: middle;
+}
+
+.portfolio{
+    max-width: 1000px;
+    margin:auto;
+    display:flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .portfolio img{
@@ -134,6 +146,7 @@ footer{
     font-family: 'Montserrat', sans-serif;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 50px;
     text-align: center;
     left: 0;
     bottom: 0;
@@ -201,27 +214,57 @@ font-family: 'Rajdhani', sans-serif;
   border: none;
   border-radius: 4px;
   box-sizing: border-box;
-    
+}
     
     
 /* Responsive layout */
 
-@media screen and (max-width: 700px) {
-  .gallery img{
-    flex: 100%;
+@media only screen and (max-width: 600px) {
+    
+    .intro {
+    display: flex;
     max-width: 100%;
+    flex-flow: column;
+    
+}
+    
+    .introLeft {
+    display: inline-block;
+    width: 70%;
+    margin:auto;
+}
+    .introRight {
+    display: inline-block;
+    width: 100%;
+    margin: auto;
+    text-align: center;
 
+    }
+    
+  .gallery img{
+    width: 100%;
     }
     
     .portfolio img{
     width: 100%;
 }
     
+    .SelfPortrait{
+    width: 100%;
+}
+
+.SelfPortraitImg {
+    width: 100%;
+    padding: 5%;
+    }
+    
     input[type=text], select, textarea {
   width: 100%;
+        
     }
     
     .formcontainer { 
     width:100%;
     }
-}
+    
+   }
